# resfinder-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/resfinder_parser/: __init__.py  __main__.py  data_classes.py  resfinder_result_parser.py
test_out/: combined_presence_absence.tsv  isolate_summaries.tsv  region_results.tsv  variation_results.tsv
tests/: conftest.py  test_data_classes.py  test_resfinder.py
tests/fixtures/Isolate01/: F15-4.json  ResFinder_results_tab.txt
tests/fixtures/Isolate02/: F29-1.json  ResFinder_results_tab.txt
tests/fixtures/Isolate03/: A13.json  PointFinder_results.txt  ResFinder_results_tab.txt
tests/fixtures/Isolate05/: ResFinder_results.json
